--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass> ca.uwo.csd.cs2212.team4.App </mainClass>
+                            <mainClass> ca.uwo.csd.cs2212.team4.GUIApp </mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -60,7 +60,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>ca.uwo.csd.cs2212.team4.App</mainClass>
+                            <mainClass>ca.uwo.csd.cs2212.team4.GUIApp</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
