--- a/pom.xml
+++ b/pom.xml
@@ -6,22 +6,16 @@
 
     <groupId>ca.uwo.csd.cs2212.team4</groupId>
     <artifactId>team4</artifactId>
-    <packaging> jar </packaging>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
     <dependencies>
-        <dependency>
-            <groupId> org.apache.logging.log4j </groupId>
-            <artifactId> log4j-api </artifactId>
-            <version> 2.0-beta9 </version>
-        </dependency>
-
-        <dependency>
-            <groupId> org.apache.logging.log4j </groupId>
-            <artifactId> log4j-core </artifactId>
-            <version> 2.0-beta9 </version>
-        </dependency>
-
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
@@ -34,6 +28,23 @@
             <version>20090211</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.jgoodies</groupId>
+            <artifactId>jgoodies-common</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jgoodies</groupId>
+            <artifactId>forms</artifactId>
+            <version>1.0.5</version>
+        </dependency>
     </dependencies>
 
     <build>
